@@ -209,6 +209,7 @@ GLOBAL GtkWidget *pattern_name_entry, *pattern_name_label;
 GLOBAL GtkWidget *SaveBox;
 GLOBAL GtkWidget *LoadBox;
 GLOBAL GtkWidget *SaveDrumkitBox;
+GLOBAL GtkWidget *ImportPatternsBox;
 GLOBAL GtkWidget *midi_setup_activate_button;
 GLOBAL GtkWidget *hide_instruments;
 GLOBAL GtkWidget *hide_volume_sliders;
